pulse-client/config/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: pulse-client
    type: api
  name: pulse-client
  namespace: prototype
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: pulse-client
        type: api
    spec:
      containers:
      - image: quay.io/parkhubprime/pulse-client
        name: pulse-client
        ports:
         - containerPort: 3000
           name: pulseclient
