pulse-client/config/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pulse-client
    type: api
  name: pulse-client
  namespace: prototype
spec:
  clusterIP: None
  ports:
    - port: 3000
      name: http
  selector:
    name: pulse-client
    type: api
